--- a/index.html
+++ b/index.html
@@ -3,23 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Riverdale Poultry - Regeneration Process</title>
+    <title>Regeneration Process</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+            margin-top: 50px;
+        }
+        .download-button {
+            display: inline-block;
+            padding: 10px 20px;
+            font-size: 18px;
+            color: #fff;
+            background-color: #007BFF;
+            text-decoration: none;
+            border-radius: 5px;
+            border: none;
+            cursor: pointer;
+        }
+        .download-button:hover {
+            background-color: #0056b3;
+        }
+    </style>
 </head>
-<body style="text-align: center; font-family: Arial, sans-serif;">
-
-    <!-- Company Logo -->
-    <img src="path/to/riverdale_logo.png.jfif" alt="Riverdale Poultry Logo" width="200">
-
-    <h1>Regeneration Process</h1>
-
-    <!-- Button to Download PDF -->
-    <button onclick="window.open('path/to/One_page_Regeneration_Notes.pdf')">Download Regeneration Notes PDF</button>
-    <br><br>
-
-    <!-- Buttons for YouTube Video Links -->
-    <button onclick="window.open('https://www.youtube.com/watch?v=yeW9l_pLFuE')">Parked Regen GHG17 - Steps to Complete Regen Training Video</button>
-    <br><br>
-    <button onclick="window.open('https://freightlineradsaem.azureedge.net/content/dam/enterprise/videos/2625-parked_regen_ghg17_new_dash_cl-2017-11-06.mp4')">Parked Regen GHG17</button>
-
+<body>
+    <h1>Regeneration Process Overview</h1>
+    <p>Download the full notes for the Regeneration Process:</p>
+    <a href="One_page_Regeneration_Notes.pdf" download class="download-button">Download PDF</a>
 </body>
 </html>
